--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # MUSE data and result folders
 
-data/crosslingual
-data/monolingual/
+data/
 dumped/
 vectors/
 *.vec
 joint_align/
+*.txt
 
 # Created by https://www.gitignore.io/api/vim,python
 
